Added 5 months plan page and growth page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 16.121A3 3 0 1014.12 11.88l-4.242 4.242z" />
                     </svg>
                 </div>
-                <h1 class="text-xl font-bold text-stone-800">C2C Blueprint</h1>
+                <h1 class="text-xl font-bold text-stone-800">Woovle</h1>
             </div>
             <ul>
                 <li><a href="#" class="nav-link active flex items-center p-3 my-1 rounded-lg" data-view="overview">
@@ -114,6 +114,12 @@
                 </a></li>
                 <li><a href="#" class="nav-link flex items-center p-3 my-1 rounded-lg" data-view="model">
                     <span class="mr-3 text-lg">💰</span> Business Model
+                </a></li>
+                <li><a href="./5_months_plan.html" class="flex items-center p-3 my-1 rounded-lg" data-view="plan">
+                    <span class="mr-3 text-lg">⛳</span> 5 Months Plan
+                </a></li>
+                <li><a href="./growth.html" class="flex items-center p-3 my-1 rounded-lg" data-view="growth">
+                    <span class="mr-3 text-lg">✨</span> Growth Dashboard
                 </a></li>
             </ul>
         </nav>
