--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strategic Blueprint: Hybrid C2C Sales & Rental Marketplace</title>
+    <title>Woovle: Strategic Blueprint: Hybrid C2C Sales & Rental Marketplace</title>
+    <link rel="shortcut icon" href="./Images/favicon-32x32.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
